--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HTML FELIXXX</title>
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+<body>
+
+  <header>
+    <img src="/assets/img/logo.png" alt="">
+    <nav>
+      <a href="">Skills</a>
+      <a href="">Projetos</a>
+      <a href="">Sobre</a>
+      <a href="">Contatos</a>
+      <a id="button" href="">Download Cv</a>
+    </nav>
+  </header>
+
+</body>
+</html>
