Create the title component

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>HTML FELIXXX</title>
   
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
+
   
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/components/title.css">
 </head>
 <body>
 
@@ -24,6 +26,8 @@
       <a id="button" href="">Download Cv</a>
     </nav>
   </header>
+
+  <h1>Kaique Augusto</h1>
 
 </body>
 </html>
