--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/components/title.css">
+  <link rel="stylesheet" href="css/components/subtitle.css">
 </head>
 <body>
 
@@ -28,6 +29,7 @@
   </header>
 
   <h1>Kaique Augusto</h1>
+  <h2>Programming student </h2>
 
 </body>
 </html>
