--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/components/title.css">
   <link rel="stylesheet" href="css/components/subtitle.css">
+  <link rel="stylesheet" href="css/components/button.css">
 </head>
 <body>
 
@@ -24,12 +25,17 @@
       <a href="">Projetos</a>
       <a href="">Sobre</a>
       <a href="">Contatos</a>
-      <a id="button" href="">Download Cv</a>
+      <a class="button" href="">Download Cv</a>
     </nav>
   </header>
 
-  <h1>Kaique Augusto</h1>
-  <h2>Programming student </h2>
+  <div id="box">
+    <h1>Kaique Augusto</h1>
+    <h2>Programming student </h2>
+  </div>
+
+  <a class="button" href="">Download Cv</a>
+  <a class="button" href="">Contatos</a>
 
 </body>
 </html>
