--- a/index.html
+++ b/index.html
@@ -29,13 +29,20 @@
     </nav>
   </header>
 
-  <div id="box">
-    <h1>Kaique Augusto</h1>
-    <h2>Programming student </h2>
-  </div>
+  <section class="banner">
+    <div class="wrapper">
+      <div id="box">
+        <h1>Kaique Augusto</h1>
+        <h2>Programming student </h2>
+      </div>
 
-  <a class="button" href="">Download Cv</a>
-  <a class="button" href="">Contatos</a>
+      <div class="navigation">
+        <a class="button" href="">Download Cv</a>
+        <a class="button" href="">Contatos</a>
+      </div>
+    </div>
+  </section>
+
 
 </body>
 </html>
