--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
   
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/components/header.css">
   <link rel="stylesheet" href="css/components/title.css">
   <link rel="stylesheet" href="css/components/subtitle.css">
   <link rel="stylesheet" href="css/components/button.css">
+  <link rel="stylesheet" href="css/components/section.css">
+  <link rel="stylesheet" href="css/components/skills.css">
 </head>
 <body>
 
@@ -43,6 +46,89 @@
     </div>
   </section>
 
+  <section class="section">
+    <h1>Skills</h1>
+
+    <div class="wrapper-skill">
+
+      <div class="skills-item">
+
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_html5.svg" alt="">
+          <div>
+            <h2>HTML</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+  
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_css3.svg" alt="">
+          <div>
+            <h2>CSS</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_js.svg" alt="">
+          <div>
+            <h2>JAVASCRIPT</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_react.svg" alt="">
+          <div>
+            <h2>REACT</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+        
+      </div>
+
+      <div class="skills-item">
+
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_html5.svg" alt="">
+          <div>
+            <h2>HTML</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+  
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_css3.svg" alt="">
+          <div>
+            <h2>CSS</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_js.svg" alt="">
+          <div>
+            <h2>CSS</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+  
+        <div class="skill">
+          <img class="skill-image" src="/assets/img/ico_react.svg" alt="">
+          <div>
+            <h2>CSS</h2>
+            <div class="progress-bar"><span class="value"></span></div>
+          </div>
+        </div>
+        
+  
+      </div>
+
+    </div>
+
+  </section>
 
 </body>
 </html>
