--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="css/components/button.css">
   <link rel="stylesheet" href="css/components/section.css">
   <link rel="stylesheet" href="css/components/skills.css">
+  <link rel="stylesheet" href="css/components/projects-section.css">
+  <link rel="stylesheet" href="css/components/project.css">
 </head>
 <body>
 
@@ -126,6 +128,25 @@
   
       </div>
 
+    </div>
+
+  </section>
+
+  <section class="projects-section">
+    <h1>Projetos</h1>
+    <div class="wrapper-project">
+      <div class="project">
+        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
+        <p>Aplicação web</p>
+      </div>
+      <div class="project">
+        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
+        <p>Aplicação web</p>
+      </div>
+      <div class="project">
+        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
+        <p>Aplicação web</p>
+      </div>
     </div>
 
   </section>
