--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <header>
     <img src="/assets/img/logo.png" alt="">
+    <img class="hamburger" src="/assets/img/hamburger.svg" alt="">
     <nav>
       <a href="">Skills</a>
       <a href="">Projetos</a>
