--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <img class="skill-image" src="/assets/img/ico_html5.svg" alt="">
           <div>
             <h2>HTML</h2>
-            <div class="progress-bar"><span class="value"></span></div>
+            <div class="progress-bar"></div>
           </div>
   
         </div>
