Create the section component

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="css/components/skills.css">
   <link rel="stylesheet" href="css/components/projects-section.css">
   <link rel="stylesheet" href="css/components/project.css">
+  <link rel="stylesheet" href="css/components/banner.css">
 </head>
 <body>
 
@@ -38,7 +39,7 @@
   <section class="banner">
     <div class="wrapper">
       <div id="box">
-        <h1>Kaique Augusto</h1>
+        <h1 class="title">Kaique Augusto</h1>
         <h2>Programming student </h2>
       </div>
 
@@ -50,105 +51,9 @@
   </section>
 
   <section class="section">
-    <h1>Skills</h1>
-
-    <div class="wrapper-skill">
-
-      <div class="skills-item">
-
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_html5.svg" alt="">
-          <div>
-            <h2>HTML</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-  
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_css3.svg" alt="">
-          <div>
-            <h2>CSS</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_js.svg" alt="">
-          <div>
-            <h2>JAVASCRIPT</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_react.svg" alt="">
-          <div>
-            <h2>REACT</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-        
-      </div>
-
-      <div class="skills-item">
-
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_html5.svg" alt="">
-          <div>
-            <h2>HTML</h2>
-            <div class="progress-bar"></div>
-          </div>
-  
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_css3.svg" alt="">
-          <div>
-            <h2>CSS</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_js.svg" alt="">
-          <div>
-            <h2>CSS</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-  
-        <div class="skill">
-          <img class="skill-image" src="/assets/img/ico_react.svg" alt="">
-          <div>
-            <h2>CSS</h2>
-            <div class="progress-bar"><span class="value"></span></div>
-          </div>
-        </div>
-        
-  
-      </div>
-
-    </div>
-
+    <h2 class="title -second">Skills</h2>
   </section>
 
-  <section class="projects-section">
-    <h1>Projetos</h1>
-    <div class="wrapper-project">
-      <div class="project">
-        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
-        <p>Aplicação web</p>
-      </div>
-      <div class="project">
-        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
-        <p>Aplicação web</p>
-      </div>
-      <div class="project">
-        <img src="/assets/img/logo-collabcode.svg" alt="" class="project-image">
-        <p>Aplicação web</p>
-      </div>
-    </div>
 
   </section>
 
