--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="css/components/header.css">
-  <link rel="stylesheet" href="css/components/title.css">
+  <link rel="stylesheet" href="css/components/main-title.css">
   <link rel="stylesheet" href="css/components/subtitle.css">
   <link rel="stylesheet" href="css/components/button.css">
   <link rel="stylesheet" href="css/components/section.css">
-  <link rel="stylesheet" href="css/components/skills.css">
+  <link rel="stylesheet" href="css/components/skill-tech.css">
   <link rel="stylesheet" href="css/components/projects-section.css">
   <link rel="stylesheet" href="css/components/project.css">
   <link rel="stylesheet" href="css/components/banner.css">
+  <link rel="stylesheet" href="css/components/progress-bar.css">
+  <link rel="stylesheet" href="css/components/title.css">
 </head>
 <body>
 
@@ -39,7 +41,7 @@
   <section class="banner">
     <div class="wrapper">
       <div id="box">
-        <h1 class="title">Kaique Augusto</h1>
+        <h1 class="main-title">Kaique Augusto</h1>
         <h2>Programming student </h2>
       </div>
 
@@ -51,9 +53,15 @@
   </section>
 
   <section class="section">
-    <h2 class="title -second">Skills</h2>
-  </section>
-
+    <h2 class="title">Skills</h2>
+    
+    <article class="skill-tech">
+      <img class="icon" src="/assets/img/ico_html5.png" alt="">
+      <div class="wrapper-skill">
+        <h3>HTML</h3>
+        <progress max="100" value="70" class="progress-bar">70%</progress>
+      </div>
+    </article>
 
   </section>
 
