Finalizes project section

--- a/index.html
+++ b/index.html
@@ -10,20 +10,22 @@
   <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&family=Press+Start+2P&display=swap" rel="stylesheet">
 
   
-  <link rel="stylesheet" href="/css/reset.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/components/header.css">
   <link rel="stylesheet" href="css/components/main-title.css">
   <link rel="stylesheet" href="css/components/subtitle.css">
-  <link rel="stylesheet" href="css/components/button.css">
-  <link rel="stylesheet" href="css/components/section.css">
+  <link rel="stylesheet" href="css/components/main-button.css">
+  <link rel="stylesheet" href="css/components/main-section.css">
   <link rel="stylesheet" href="css/components/skill-tech.css">
   <link rel="stylesheet" href="css/components/projects-section.css">
   <link rel="stylesheet" href="css/components/project.css">
-  <link rel="stylesheet" href="css/components/banner.css">
+  <link rel="stylesheet" href="css/components/main-banner.css">
   <link rel="stylesheet" href="css/components/progress-bar.css">
-  <link rel="stylesheet" href="css/components/title.css">
+  <link rel="stylesheet" href="css/components/section-title.css">
   <link rel="stylesheet" href="css/components/wrapper-skill.css">
+  <link rel="stylesheet" href="css/components/project.css">
+  <link rel="stylesheet" href="css/components/wrapper-project.css">
 </head>
 <body>
 
@@ -35,11 +37,11 @@
       <a href="">Projetos</a>
       <a href="">Sobre</a>
       <a href="">Contatos</a>
-      <a class="button" href="">Download Cv</a>
+      <a class="main-button" href="">Download Cv</a>
     </nav>
   </header>
 
-  <section class="banner">
+  <section class="main-banner">
     <div class="wrapper">
       <div id="box">
         <h1 class="main-title">Kaique Augusto</h1>
@@ -47,14 +49,14 @@
       </div>
 
       <div class="navigation">
-        <a class="button" href="">Download Cv</a>
-        <a class="button" href="">Contatos</a>
+        <a class="main-button" href="">Download Cv</a>
+        <a class="main-button" href="">Contatos</a>
       </div>
     </div>
   </section>
 
-  <section class="section">
-    <h2 class="title">Skills</h2>
+  <section class="main-section">
+    <h2 class="section-title">Skills</h2>
     
     <div class="wrapper-skill">
       <article class="skill-tech">
@@ -115,6 +117,36 @@
       </article>
     </div>
     
+
+  </section>
+
+  <section class="main-section -bgDark">
+    <h2 class="section-title">Projetos</h2>
+
+    <div class="wrapper-project">
+
+      <a href="https://kaiqueguzto.github.io/galeria-javascript/">
+        <figure class="project">
+          <img class="project-card" src="/assets/img/projeto02.png" alt="">
+          <p class="project-p">Galeria</p>
+        </figure>
+      </a>
+
+      <a href="https://kaiqueguzto.github.io/controle-financeiro/">
+        <figure class="project">
+          <img class="project-card" src="/assets/img/projeto01.png" alt="">
+          <p class="project-p">Controle de finanças</p>
+        </figure>
+      </a>
+
+      <a href="https://kaiqueguzto.github.io/lyrics-search/">
+        <figure class="project">
+          <img class="project-card" src="/assets/img/Screenshot from 2021-04-03 23-33-18.png" alt="">
+          <p class="project-p">Lyrics Search</p>
+        </figure>
+      </a>
+
+    </div>
 
   </section>
 
